Exercícios da aula 4 concluídos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,159 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="__seu nome__">
-    <title>Título da página</title>
+    <title>Um pouco sobre mim</title>
 </head>
 
+
 <body>
+
+    <header>
+        <h1>Haydée Dela Vedova Murara</h1>
+        <hr>
+        <p>Após a formatura no curso de Análise e Desenvolvimento de Sistemas no IFSC, espero prestar um concurso
+            público para trabalhar na área de tecnologia e programação em um órgão estatal ou federal.</p>
+        <img src="img/ti.jpg" alt="A imagem não está disponível" height="40%" width="30%">
+    </header>
+
+
+    <br>
+    <hr>
+
+
+    <section>
+
+        <h2>Minhas habilidades:</h2>
+        <ol>
+            <img src="img/icon/organizada.png" alt="Ícone não disponível" height="3%" width="3%">
+            <li>Organizada</li>
+
+            <br>
+
+            <img src="img/icon/estudiosa.png" alt="Ícone não disponível" height="3%" width="3%">
+            <li>Estudiosa</li>
+
+            <br>
+
+            <img src="img/icon/determinada.png" alt="Ícone não disponível" height="3%" width="3%">
+            <li>Determinada</li>
+        </ol>
+
+        <h2>Habilidades que espero adquirir:</h2>
+        <ul>
+            <a href="https://www.alura.com.br/cursos-online-programacao" target="_blank">
+                <img src="img/icon/programacao.png" alt="Ícone não disponível" height="3.5%" width="3.5%">
+            </a>
+            <li>Mais conhecimento na área de programação</li>
+
+            <br>
+
+            <a href="https://www.udemy.com/course/procrastinar" target="_blank">
+                <img src="img/icon/procastinar.png" alt="Ícone não disponível" height="3.5%" width="3.5%">
+            </a> 
+            <li>Procastinar menos</li>
+
+            <br>
+
+            <a href="https://hotmart.com/pt-br/marketplace/produtos/como-criar-o-habito-de-ler" target="_blank">
+                <img src="img/icon/ler.png" alt="Ícone não disponível" height="3.5%" width="3.5%">
+            </a>
+            <li>Ler mais sobre diversos assuntos</li>
+        </ul>
+
+    </section>
+
+
+    <hr>
+
+
+    <article>
+
+        <h2>Minhas disciplinas e seus respectivos professores</h2>
+
+        <dl>
+
+            <dt><b>Atividades de Extensão I</b>
+            <dd>
+                <ul>
+                    <a href="http://lattes.cnpq.br/0916545233469122" target="_blank">
+                        <li>Eraldo Silveira e Silva</li>
+                    </a>
+
+                    <a href="http://lattes.cnpq.br/4506162871034243" target="_blank">
+                        <li>Saul Silva Caetano</li>
+                    </a>
+
+                    <a href="http://lattes.cnpq.br/7132058525179906" target="_blank">
+                        <li>Volmir Von Dentz</li>
+                    </a>
+                </ul>
+            </dd>
+            </dt>
+
+
+            <dt><b>Comunicação e Expressão</b>
+            <dd>
+                <ul>
+                    <a href="http://lattes.cnpq.br/3400547503078725" target="_blank">
+                        <li>Kayron Campos Beviláqua</li>
+                    </a>
+                </ul>
+            </dd>
+            </dt>
+
+
+            <dt><b>Fundamentos de Probabilidade e Estatística</b>
+            <dd>
+                <ul>
+                    <a href="http://lattes.cnpq.br/0178487429354103" target="_blank">
+                        <li>Fabio Alexandre de Souza</li>
+                    </a>
+                </ul>
+            </dd>
+            </dt>
+
+
+            <dt><b>Programação Frontend I</b>
+            <dd>
+                <ul>
+                    <a href="http://lattes.cnpq.br/7440818969911922" target="_blank">
+                        <li>Ana Luiza Scharf</li>
+                    </a>
+                    
+                    <a href="http://lattes.cnpq.br/2227760168130993" target="_blank">
+                        <li>Sergio Maurício Prolo Santos Junior</li>
+                    </a>
+                </ul>
+            </dd>
+            </dt>
+
+
+            <dt><b>Programação Orientada a Objetos</b>
+            <dd>
+                <ul>
+                    <a href="http://lattes.cnpq.br/1478274711167428" target="_blank">
+                        <li>Emerson Ribeiro de Mello</li>
+                    </a>
+                </ul>
+            </dd>
+            </dt>
+
+
+            <dt><b>Redes de Computadores</b>
+            <dd>
+                <ul>
+                    <a href="http://lattes.cnpq.br/8054433579343358" target="_blank">
+                        <li>Odilson Tadeu Valle</li>
+                    </a>
+                </ul>
+            </dd>
+            </dt>
+
+        </dl>
+
+    </article>
+
 </body>
 
 </html>
