--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <a href="https://www.udemy.com/course/procrastinar" target="_blank">
                 <img src="img/icon/procastinar.png" alt="Ícone não disponível" height="3.5%" width="3.5%">
-            </a> 
+            </a>
             <li>Procastinar menos</li>
 
             <br>
@@ -120,7 +120,7 @@
                     <a href="http://lattes.cnpq.br/7440818969911922" target="_blank">
                         <li>Ana Luiza Scharf</li>
                     </a>
-                    
+
                     <a href="http://lattes.cnpq.br/2227760168130993" target="_blank">
                         <li>Sergio Maurício Prolo Santos Junior</li>
                     </a>
@@ -152,6 +152,121 @@
 
         </dl>
 
+    </article>
+
+    <article>
+        <table border=1>
+
+            <tr>
+                <th></th>
+                <th colspan="6">DIAS DA SEMANA</th>
+            <tr>
+
+            <tr>
+                <th rowspan="5">HORÁRIOS</th>
+                <th></th>
+                <th>SEG</th>
+                <th>TER</th>
+                <th>QUA</th>
+                <th>QUI</th>
+                <th>SEX</th>
+            </tr>
+
+            <tr>
+                <th>18h30</th>
+                <td rowspan="2">Redes de Computadores</td>
+                <td rowspan="2">Programação Frontend I</td>
+                <td rowspan="2">Fundamentos de Probabilidade e Estatística</td>
+                <td rowspan="2">Programação Frontend I</td>
+                <td rowspan="2">Redes de Computadores</td>
+            </tr>
+
+            <tr>
+                <th>19h25</th>
+            </tr>
+
+            <tr>
+                <th>20h40</th>
+                <td rowspan="2">Programação Orientada a Objetos</td>
+                <td rowspan="2">Comunicação e Expressão</td>
+                <td rowspan="2">Atividades de Extensão I</td>
+                <td rowspan="2">Programação Orientada a Objetos</td>
+                <td rowspan="2">Fundamentos de Probabilidade e Estatística</td>
+            </tr>
+
+            <tr>
+                <th>21h35</th>
+            </tr>
+
+        </table>
+    </article>
+
+    <br>
+    <br>
+
+    <article>
+
+        <table border=1>
+
+            <tr>
+                <th></th>
+                <th colspan="5">Ônibus saindo de Joinville</th>
+            </tr>
+
+            <tr>
+                <th>DESTINO</th>
+                <th>CIDADE 1</th>
+                <th>CIDADE 2</th>
+                <th>CIDADE 3</th>
+                <th>CIDADE 4</th>
+                <th>CIDADE 5</th>
+            </tr>
+
+            <tr>
+                <th>EMPRESA</th>
+                <td>empresa 1</td>
+                <td>empresa 2</td>
+                <td>empresa 3</td>
+                <td>empresa 4</td>
+                <td>empresa 5</td>
+            </tr>
+
+            <tr>
+                <th rowspan="2">HORÁRIOS</th>
+                <td>horário 1</td>
+                <td>horário 2</td>
+                <td>horário 3</td>
+                <td>horário 4</td>
+                <td>horário 5</td>
+            </tr>
+
+            <tr>
+                <td>horário (1)</td>
+                <td>horário (2)</td>
+                <td>horário (3)</td>
+                <td>horário (4)</td>
+                <td>horário (5)</td>
+            </tr>
+
+            <tr>
+                <th>TARIFA</th>
+                <td>tarifa 1</td>
+                <td>tarifa 2</td>
+                <td>tarifa 3</td>
+                <td>tarifa 4</td>
+                <td>tarifa 5</td>
+            </tr>
+
+            <tr>
+                <th>CLASSE</th>
+                <td>classe 1</td>
+                <td>classe 2</td>
+                <td>classe 3</td>
+                <td>classe 4</td>
+                <td>classe 5</td>
+            </tr>
+
+        </table>
     </article>
 
 </body>
